# rag-fast-flow

./: .dockerignore  Dockerfile  README.md  app.py  docker-compose.yml  llm_service.py  pyproject.toml  rag_service.py  raw_poc.ipynb
data/: fast_flow_extracted.json
